# RTRayTracer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/glad/: glad.c  glad.h
shaders/compute/: compute.comp  raytrace.comp
shaders/object/: rect.frag  rect.vert
src/: main.cpp
src/acceleration/: bvh.cpp  bvh.h  kdtree.cpp  kdtree.h
src/display/: camera.cpp  camera.h  display.cpp  display.h  window.cpp  window.h
src/model/: intersectable.cpp  intersectable.h  light.cpp  light.h  model.cpp  model.h  object.cpp  object.h
src/model/intersectable/: aabb.cpp  aabb.h  intersectable.cpp  intersectable.h  intersectable_manager.cpp  intersectable_manager.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/shader/: image.cpp  image.h  shader.cpp  shader.h
src/util/: data.h  exception.cpp  exception.h  logging.cpp
src/util/profiling/: profiling.h  timetree.cpp
